--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
+  - host: example.com
   - http:
       paths:
       - path: /frontend
