--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -8,9 +8,9 @@ metadata:
 spec:
   rules:
   - host: example.com
-  - http:
+    http:
       paths:
-      - path: /frontend
+      - path: /
         pathType: Prefix
         backend:
           service:
