--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,26 +1,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress
-  annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: example-ingress
 spec:
   rules:
   - host: example.com
     http:
       paths:
-      - path: /
+      - path: /frontend
         pathType: Prefix
         backend:
           service:
-            name: ui-service
+            name: frontend-service
             port:
               name: http
       - path: /backend
         pathType: Prefix
         backend:
           service:
-            name: api-service
+            name: backend-service
             port:
               name: http
