--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -2,9 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: example-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
+  ingressClassName: nginx
   rules:
-  - host: example.com
     http:
       paths:
       - path: /frontend
@@ -14,6 +16,7 @@ spec:
             name: ui-app-service
             port:
               name: http
+              number: 80
       - path: /backend
         pathType: Prefix
         backend:
@@ -21,3 +24,4 @@ spec:
             name: api-app-service
             port:
               name: http
+              number: 8080
