--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    http:
+  - http:
       paths:
       - path: /frontend
         pathType: Prefix
