--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,8 +3,8 @@ kind: Ingress
 metadata:
   name: example-ingress
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.org/mergeable-ingress-type: "minion"
+    kubernetes.io/ingress.class: nginx
+    nginx.org/mergeable-ingress-type: minion
 spec:
   rules:
   - http:
