--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -9,14 +9,14 @@ spec:
   rules:
   - http:
       paths:
-      - path: /frontend
+      - path: /
         pathType: Prefix
         backend:
           service:
             name: ui-app-service
             port:
               name: http
-      - path: /backend
+      - path: /api
         pathType: Prefix
         backend:
           service:
