--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /board
+      - path: /
         pathType: Prefix
         backend:
           service:
