--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api-app
-          image: itisshajith/test:ap
+          image: itisshajith/test:api
           ports:
             - containerPort: 5001
           env:
