--- a/k8s/ui-deployment.yaml
+++ b/k8s/ui-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: ui-app
-          image: itisshajith/test:lates
+          image: itisshajith/test:latest
           ports:
             - containerPort: 80
       imagePullSecrets:
