--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,11 +5,12 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.org/mergeable-ingress-type: minion
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - http:
       paths:
-      - path: /board
+      - path: /board(/|$)(.*)
         pathType: Prefix
         backend:
           service:
