--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /board
+      - path: /
         pathType: Prefix
         backend:
           service:
