--- a/k8s/api-deployment.yaml
+++ b/k8s/api-deployment.yaml
@@ -30,6 +30,11 @@ spec:
             value: "lECaLUPILOxgGKX8"
           - name: "INFRACOST_APIKEY1"
             value: "ico-aGjgbaGNTQsQDhWsUPUMwNSFv9JetNTm"
+          - name: test
+            valueFrom:
+              secretKeyRef:
+                name: regcred
+                key: .dockerconfigjson
           - name: ARGO_URL
             valueFrom:
               secretKeyRef:
