--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  .dockerconfigjson: eyJhdXRocyI6eyJodHRwczovL2luZGV4LmRvY2tlci5pby92MS8iOnsidXNlcm5hbWUiOiJpdGlzc2hhaml0aCIsInBhc3N3b3JkIjoiWW91Y2FudGZpbmRAMTIzNCIsImVtYWlsIjoic2hhaml0aGtoYW5hZnJpZGlAZ21haWwuY29tIiwiYXV0aCI6ImFYUnBjM05vWVdwcGRHZzZXVzkxWTJGdWRHWnBibVJBTVRJek5BPT0ifX19
+  .dockerconfigjson: asd
 kind: Secret
 metadata:
   name: regcred
