--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -1,73 +1,33 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: c2048
-  labels:
-    app.kubernetes.io/name: c2048
-    app.kubernetes.io/instance: c2048
-spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 80
-      protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: c2048
-    app.kubernetes.io/instance: c2048
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: c2048
-  labels:
-    app.kubernetes.io/name: c2048
-    app.kubernetes.io/instance: c2048
+  name: nginx
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: c2048
-      app.kubernetes.io/instance: c2048
+      app: nginx
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: c2048
-        app.kubernetes.io/instance: c2048
+        app: nginx
     spec:
-      securityContext: {}
       containers:
-        - name: c2048
-          securityContext: {}
-          image: "epflsti/nginx"
-          imagePullPolicy: Always
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
-      nodeSelector:
-        kubernetes.io/hostname: ip-10-0-2-58.us-east-2.compute.internal
+      - image: epflsti/nginx
+        name: nginx
+        ports:
+        - containerPort: 80
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: c2048
-  labels:
-    app.kubernetes.io/name: c2048
-    app.kubernetes.io/instance: c2048
+  name: nginx
   annotations:
-    nginx.org/mergeable-ingress-type: minion
+    external-dns.alpha.kubernetes.io/hostname: sha9.shc7.clappit.io
 spec:
-  ingressClassName: nginx
-  rules:
-    - host: "sha8.shc7.clappit.io"
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: c2048
-                port:
-                  number: 80
+  selector:
+    app: nginx
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
