--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -46,8 +46,8 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
-      nodeSelector:
-        kubernetes.io/hostname: ip-10-0-1-186.us-east-2.compute.internal
+      #nodeSelector:
+      #  kubernetes.io/hostname: ip-10-0-1-186.us-east-2.compute.internal
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
