--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -46,8 +46,6 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
-      nodeSelector:
-        kubernetes.io/hostname: ip-10-0-2-245.us-east-2.compute.internal
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -61,10 +59,10 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: "a2.shc7.clappit.io"
+    - host: "console.clappit.io"
       http:
         paths:
-          - path: /
+          - path: /test
             pathType: Prefix
             backend:
               service:
